# sbomgate

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/: sbom-diff.json
demos/01-basic/: SCENARIO.md  advisories.json  sbom-new.json  sbom-old.json
demos/01-log4shell-class-incident/: SCENARIO.md  sbom-diff.json
demos/02-supply-chain-maintainer-change/: SCENARIO.md  sbom-diff.json
demos/03-license-flip/: SCENARIO.md  sbom-diff.json
demos/04-spdx-format-nodejs/: SCENARIO.md  advisories.json  sbom.json
demos/05-transitive-critical/: SCENARIO.md  advisories.json  sbom-new.json  sbom-old.json
demos/06-clean-build-passes/: SCENARIO.md  advisories.json  sbom-new.json  sbom-old.json
demos/07-ecosystem-mismatch/: SCENARIO.md  advisories.json  sbom.json
demos/08-multi-ecosystem-monorepo/: SCENARIO.md  advisories.json  sbom-new.json  sbom-old.json
demos/09-sarif-codescanning/: SCENARIO.md  advisories.json  sbom.json
deploy/: docker-compose.yml  k8s.yaml
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: db.txt  feeds.txt  help.txt  version.txt
integrations/: webhook.py
ports/: README.md
sbomgate/: __init__.py  __main__.py  cli.py  connect.py  core.py  data_feeds_2026.json  datafeeds.py  feeds.py  mcp_server.py  vulnmatch.py
tests/: test_connect.py  test_core_extra.py  test_datafeeds.py  test_db_cli.py  test_feeds.py  test_hardening.py  test_ports.py  test_sarif.py  test_smoke.py  test_vulndb_local.py  test_vulnmatch.py
(+25 files in other folders)
