[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-sbomgate"
version = "0.1.1"
description = "Continuous SBOM diff & vulnerability watch with maintainer-change tracking"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["blue-team", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/sbomgate"

[project.scripts]
"sbomgate-emit" = "sbomgate.connect:emit_main"
sbomgate = "sbomgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sbomgate"]
